[gd_scene load_steps=3 format=2]

[ext_resource path="res://Graphics/Icons/Money.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ItemForSale.gd" type="Script" id=2]

[node name="ItemOnSale" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1088.0
margin_bottom = -490.0
rect_min_size = Vector2( 192, 230 )
rect_clip_content = true
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 192.0
margin_bottom = 228.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemTexture" type="TextureRect" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyCost" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 192.0
margin_bottom = 228.0
alignment = 1

[node name="Texture" type="TextureRect" parent="VBoxContainer/MoneyCost"]
margin_left = 62.0
margin_right = 102.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
texture = ExtResource( 1 )

[node name="Text" type="Label" parent="VBoxContainer/MoneyCost"]
margin_left = 106.0
margin_top = 9.0
margin_right = 130.0
margin_bottom = 23.0
text = "100"

[node name="Button" type="Button" parent="."]
margin_right = 192.0
margin_bottom = 230.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
